--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,17 @@ code {
     }
   }
 }
+
+.loader {
+  display: inline-block;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 9999px;
+  border-color: #fff #fff #fff transparent;
+  width: 1rem;
+  height: 1rem;
+  animation: spin 0.8s linear infinite;
+}
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
